Basic functioning ordering menu created

--- a/src/app/modules/bookingcheckoutcard/bookingcheckoutcard.component.css
+++ b/src/app/modules/bookingcheckoutcard/bookingcheckoutcard.component.css
@@ -16,7 +16,7 @@
 
 .points-error {
   display: inline-block;
-  text-align: left;
+  text-align: center;
   vertical-align: middle;
   width: 100%;
   padding: 2% 2%;
