minor bug fixes for voice input and changed icons prog png to angular material icon

--- a/src/app/components/chatbot/chat-input/chat-input.component.css
+++ b/src/app/components/chatbot/chat-input/chat-input.component.css
@@ -47,15 +47,19 @@ input{
   width: 10%;
   height: 40px;
   background-color: white;
-  color: #007bff;
   padding: 3px 8px 3px 3px;
 }
-
-.voice img {
-  border: none;
-  max-width: 70%;
-  max-height: 70%;
+.voice-active{
+  color: green;
 }
+.voice-disabled{
+  color: white;
+  visibility: hidden;
+}
+.voice-inactive{
+color: #007bff;
+}
+
 
 .send {
   width: 20%;
@@ -77,10 +81,8 @@ input{
   background-color: white;
   color: #007bff;
 }
-
-.text img {
-  max-width: 70%;
-  max-height: 70%;
+.text .material-icons{
+  margin: auto auto;
 }
 
 @media screen and (min-width: 320px) {
