--- a/src/app/modules/menu/menu.component.css
+++ b/src/app/modules/menu/menu.component.css
@@ -17,11 +17,12 @@
 .restaurantInfo {
   width: 100%;
   height: auto;
+  padding: 4%;
 }
 
 .restaurantInfo h1 {
-  font-size: 18px;
-  line-height: 18px;
+  font-size: 22px;
+  line-height: 22px;
   font-weight: normal;
   color: #000000;
   -webkit-font-smoothing: antialiased;
@@ -37,57 +38,69 @@
 
 .foodItemsMenu {
   width: 100%;
-  height: 180px;
-  white-space: nowrap;
-  overflow-y: hidden;
-  overflow-x: auto;
-}
-
-.wrapper {
-  display: inline-block;
-  width: 100%;
-  height: 100%;
+  height: 290px;
 }
 
 .menu-container {
-  width: 90%;
-  height: 96%;
-  margin: 1% 2%;
-  top: 0;
-  display: inline-block;
+  width: 98%;
+  height: 98%;
+  margin: 1% 1%;
+  display: block;
   white-space: normal;
   background-color: #fff;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 12px, rgba(0, 0, 0, 0.04) 0px 6px 6px;
+
+  white-space: nowrap;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .menu {
-  width: 94%;
-  height: 94%;
-  margin: 2% 3%;
+  width: 98%;
+  height: 98%;
+  margin: 1% 1%;
+}
+
+.menu p {
+  width: 100%;
+  font-size: 16px;
+  line-height: 16px;
+  margin: 0%;
+  color: #545454;
+  -webkit-font-smoothing: antialiased;
 }
 
 .menu-item {
   width: 100%;
   height: 25%;
+  margin: 2% 0%;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 12px, rgba(0, 0, 0, 0.04) 0px 6px 6px;
 }
 
 .menu-item-info {
   width: 70%;
   height: 100%;
+  padding: 4%;
   float: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: center;
 }
 
 .menu-item-info h1 {
-  font-size: 14px;
-  line-height: 14px;
+  white-space: initial;
+  width: 100%;
+  font-size: 16px;
+  line-height: 16px;
   font-weight: normal;
   color: #000000;
   -webkit-font-smoothing: antialiased;
 }
 
 .menu-item-info p {
-  font-size: 12px;
-  line-height: 12px;
+  width: 100%;
+  font-size: 14px;
+  line-height: 14px;
   margin: 0%;
   color: #545454;
   -webkit-font-smoothing: antialiased;
@@ -106,10 +119,15 @@
   width: 40px;
   height: 25px;
   text-align: center;
+  border: none;
 }
 .qtyChange {
   width: 25px;
   height: 25px;
+  text-align: center;
+  font-size: 18px;
+  border-radius: 50%;
+  border: 1px solid darkslategray;
 }
 
 .billInfo {
