--- a/src/app/modules/menu/menu.component.css
+++ b/src/app/modules/menu/menu.component.css
@@ -21,11 +21,12 @@
 }
 
 .restaurantInfo h1 {
-  font-size: 22px;
-  line-height: 22px;
+  font-size: 18px;
+  line-height: 18px;
   font-weight: normal;
   color: #000000;
   -webkit-font-smoothing: antialiased;
+  margin: 0%;
 }
 
 .restaurantInfo p {
@@ -38,12 +39,29 @@
 
 .foodItemsMenu {
   width: 100%;
-  height: 290px;
+  max-height: 320px;
+}
+
+.category-selector {
+  display: flex;
+  overflow-x: auto;
+}
+
+.category {
+  padding: 2%;
+  margin: 0% 2%;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.selected {
+  color: #fff;
+  background-color: #007bff;
 }
 
 .menu-container {
   width: 98%;
-  height: 98%;
+  height: 90%;
+  max-height: 280px;
   margin: 1% 1%;
   display: block;
   white-space: normal;
@@ -71,7 +89,7 @@
 
 .menu-item {
   width: 100%;
-  height: 25%;
+  height: 70px;
   margin: 2% 0%;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 12px, rgba(0, 0, 0, 0.04) 0px 6px 6px;
 }
@@ -79,7 +97,7 @@
 .menu-item-info {
   width: 70%;
   height: 100%;
-  padding: 4%;
+  padding: 3%;
   float: left;
   display: flex;
   flex-direction: column;
@@ -140,6 +158,7 @@
 
 .billInfo p {
   margin: 0%;
+  font-size: 18px;
 }
 
 .see-cart {
@@ -173,21 +192,34 @@
 .order {
   width: 100%;
   height: auto;
-  display: flex;
-  justify-content: left;
-  align-items: center;
+  text-align: center;
 }
 
 .order h1 {
-  font-size: 18px;
-  line-height: 18px;
+  font-size: 26px;
+  line-height: 26px;
+  margin: 2% 0%;
   font-weight: normal;
   color: #000000;
   -webkit-font-smoothing: antialiased;
 }
 
+.order button {
+  float: left;
+  background-color: #d9534f;
+}
+
 .cartItems {
   width: 100%;
   display: flex;
+  font-size: 16px;
   justify-content: space-between;
+}
+
+.cartItems p {
+  margin: 1%;
+}
+
+hr {
+  margin: 2%;
 }
