--- a/src/app/modules/orderingsummarycard/orderingsummarycard.component.html
+++ b/src/app/modules/orderingsummarycard/orderingsummarycard.component.html
@@ -30,7 +30,7 @@
           <p class="sectionHeading">Order Details :</p>
           
             <p>Date : {{ data["date"].split("T")[0] }}</p>
-            <p>Time : {{ data["date"].split("T")[1] }}</p>
+            <p>Time : {{ data["date"].split("T")[1].split(".")[0] }}</p>
           
           
           
