--- a/src/app/components/chatbot/chatbot.component.html
+++ b/src/app/components/chatbot/chatbot.component.html
@@ -3,6 +3,7 @@
   [bankName] = "this._stateService.appData.client"
   [userFirstName] = "this._stateService.appData.userFirstName"
   [pointBalance] = "this._stateService.appData.pointBalance"
+  [clientLogo] = "this._stateService.clientLogo"
   ></app-header>
   <app-chat-body></app-chat-body>
   <app-chat-input></app-chat-input>
