--- a/src/app/components/launcher/launcher.component.html
+++ b/src/app/components/launcher/launcher.component.html
@@ -1,48 +1,76 @@
 <div class="launcher">
-  <div class="form" >
-      <div class="heading">
-          <h1>Concierge Booking App</h1>
-        </div>
+  <div class="form">
+    <div class="heading">
+      <h1>Concierge Booking App</h1>
+    </div>
+    <div *ngIf="isErrorDetected" class="points-error">
+      <p>{{ launcherData.error }}</p>
+    </div>
     <form action="">
       <div class="environment">
         <Label>Environment</Label>
-        <select [(ngModel)]="this.launcherData.environment"  name="environment" >
+        <select
+          [(ngModel)]="this.launcherData.environment"
+          name="environment"
+          required
+        >
           <option value="development">Development</option>
         </select>
       </div>
-  
+
       <div class="client">
         <label>Client</label>
-        <select [(ngModel)]="this.launcherData.client"  name="client"  >
-          <option value="client-1">Client-1</option>
-          <option value="client-2">Client-2</option>
+        <select [(ngModel)]="this.launcherData.client" name="client" required>
+          <option value="Test">Test</option>
+          <option value="US Bank">US Bank</option>
+          <option value="American Express">American Express</option>
         </select>
       </div>
-  
+
       <div class="language">
         <label>Language</label>
-        <select  [(ngModel)]="this.launcherData.language"  name="language" >
+        <select
+          [(ngModel)]="this.launcherData.language"
+          name="language"
+          required
+        >
           <option value="en-us">English US</option>
         </select>
       </div>
-  
+
       <div class="userFirstName">
         <label>User's First Name</label>
-        <input type="text" name="userFirstName" [(ngModel)]="this.launcherData.userFirstName" placeholder="John Snow" />
+        <input
+          type="text"
+          name="userFirstName"
+          [(ngModel)]="this.launcherData.userFirstName"
+          placeholder="John Snow"
+          required
+        />
       </div>
 
       <div class="userId">
         <label>User Id</label>
-        <input type="text"  name="userId"  [(ngModel)]="this.launcherData.userId" placeholder="RETSB500" />
+        <input
+          type="text"
+          name="userId"
+          [(ngModel)]="this.launcherData.userId"
+          placeholder="RETSB500"
+        />
       </div>
-  
+
       <div class="pointBalance">
         <label>Point Balance</label>
-        <input type="text" name="pointBalance" [(ngModel)]="this.launcherData.pointBalance" placeholder="990000"/>
+        <input
+          type="text"
+          name="pointBalance"
+          [(ngModel)]="this.launcherData.pointBalance"
+          placeholder="990000"
+          required
+        />
       </div>
-  
-      <button type="submit" (click)="redirect()" >Launch</button>
+
+      <button type="submit" (click)="redirect()">Launch</button>
     </form>
   </div>
-  
 </div>
