--- a/src/app/components/location-button/location-button.component.css
+++ b/src/app/components/location-button/location-button.component.css
@@ -1,19 +1,19 @@
 button {
-    padding: 2%;
-    margin: 1% 0% 1% 7%;
-    background: #fff none repeat scroll 0 0;
-    color: #007bff;
-    border-radius: 7px;
-    border: 2px;
-    border-style: solid;
-    border-color:#007bff ;
-    font-size: 14px;
-    cursor: pointer;
-    box-shadow: 1px 2px #8d8d8d
+  padding: 2%;
+  margin: 1% 0% 1% 7%;
+  background: #fff none repeat scroll 0 0;
+  color: var(--theme-color);
+  border-radius: 7px;
+  border: 2px;
+  border-style: solid;
+  border-color: var(--theme-color);
+  font-size: 14px;
+  cursor: pointer;
+  box-shadow: 1px 2px #8d8d8d;
 }
 
-button:hover{
-    background: #007bff none repeat scroll 0 0;
-    color: #fff;
-    box-shadow: 0px 0px #007bff
+button:hover {
+  background: var(--theme-color) none repeat scroll 0 0;
+  color: #fff;
+  box-shadow: 0px 0px var(--theme-color);
 }
