--- a/src/app/modules/card/card.component.css
+++ b/src/app/modules/card/card.component.css
@@ -187,18 +187,18 @@
   padding: 2%;
   margin: 1% 0% 1% 7%;
   background: #fff none repeat scroll 0 0;
-  color: #007bff;
+  color: var(--theme-color);
   border-radius: 7px;
   border: 2px;
   border-style: solid;
-  border-color: #007bff;
+  border-color: var(--theme-color);
   font-size: 14px;
   cursor: pointer;
   box-shadow: 1px 2px #8d8d8d;
 }
 
 .browse-button:hover button {
-  background: #007bff none repeat scroll 0 0;
+  background: var(--theme-color) none repeat scroll 0 0;
   color: #fff;
-  box-shadow: 0px 0px #007bff;
+  box-shadow: 0px 0px var(--theme-color);
 }
