--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="profilePic">
     <img
-      src="https://pbs.twimg.com/profile_images/960529625188220928/hDC7W9eq_400x400.jpg"
+      [src]="clientLogo"
     />
   </div>
   <div class="bankName">
