--- a/src/app/modules/menu/menu.component.css
+++ b/src/app/modules/menu/menu.component.css
@@ -39,10 +39,11 @@
 
 .foodItemsMenu {
   width: 100%;
-  max-height: 320px;
+  height: 320px;
 }
 
 .category-selector {
+  height: 10%;
   display: flex;
   overflow-x: auto;
 }
@@ -50,7 +51,9 @@
 .category {
   padding: 2%;
   margin: 0% 2%;
-  border-radius: 10px 10px 0px 0px;
+  border-radius: 10px 10px 10px 10px;
+  font-size: 14px;
+  white-space: nowrap;
 }
 
 .selected {
@@ -58,11 +61,14 @@
   background-color: #007bff;
 }
 
+.foodItem-info{
+  white-space: nowrap;
+}
+
 .menu-container {
   width: 98%;
-  height: 90%;
-  max-height: 280px;
-  margin: 1% 1%;
+  height: 86%;
+  margin: 2% 1%;
   display: block;
   white-space: normal;
   background-color: #fff;
@@ -89,7 +95,7 @@
 
 .menu-item {
   width: 100%;
-  height: 70px;
+  height: 30%;
   margin: 2% 0%;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 12px, rgba(0, 0, 0, 0.04) 0px 6px 6px;
 }
@@ -144,12 +150,13 @@
   width: 25px;
   height: 25px;
   text-align: center;
-  font-size: 18px;
-  border-radius: 50%;
-  border: 1px solid darkslategray;
-  outline: none;
 }
-
+.add-button{
+  color: #5fbf5e;
+}
+.remove-button{
+  color: #e25656;
+}
 .billInfo {
   width: 100%;
   height: auto;
@@ -161,6 +168,7 @@
 .billInfo p {
   margin: 0%;
   font-size: 18px;
+  -webkit-font-smoothing: antialiased;
 }
 
 .see-cart {
@@ -168,7 +176,7 @@
   vertical-align: middle;
   width: auto;
   margin: 0% 1%;
-  padding: 2% 2%;
+  padding: 1% 2%;
   bottom: 0%;
   cursor: pointer;
   border-radius: 5px;
@@ -224,4 +232,89 @@
 
 hr {
   margin: 2%;
+}
+
+.user-response {
+  width: 100%;
+  margin: 5% 0%;
+}
+
+.proceedToPay {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  width: 48%;
+  margin: 0% 1%;
+  padding: 2% 2%;
+  bottom: 0%;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: #5cb85c;
+  box-shadow: 1px 2px #8d8d8d;
+}
+
+.proceedToPay:hover {
+  background-color: #ffffff;
+  border: 1px solid #4cae4c;
+}
+
+.proceedToPay p {
+  color: #fff;
+  font-size: 16px;
+  margin: 0%;
+}
+
+.proceedToPay p:hover {
+  color: #5cb85c;
+}
+
+.edit {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  width: 48%;
+  margin: 0% 1%;
+  padding: 2% 2%;
+  bottom: 0%;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: #d9534f;
+  box-shadow: 1px 2px #8d8d8d;
+}
+
+.edit:hover {
+  background-color: #ffffff;
+  border: 1px solid #d43f3a;
+}
+
+.edit p {
+  color: #fff;
+  font-size: 16px;
+  margin: 0%;
+}
+
+.edit p:hover {
+  color: #000000;
+}
+
+
+
+.points-error {
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  width: 100%;
+  padding: 2% 2%;
+  bottom: 0%;
+  border-radius: 5px;
+  background-color: #f2dede;
+  border: 1px solid #ebccd1;
+  box-shadow: 1px 2px #8d8d8d;
+  margin: 3% 0%;
+}
+
+.points-error p {
+  color: #a94442;
+  font-size: 16px;
+  margin: 0%;
 }
