--- a/src/app/components/launcher/launcher.component.css
+++ b/src/app/components/launcher/launcher.component.css
@@ -70,3 +70,12 @@ button {
   font-size: 16px;
   margin: 0%;
 }
+
+.app-loader {
+  padding-left: 35%;
+  padding-right: 35%;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  width: 100%;
+  bottom: 10%;
+}
