--- a/src/app/components/launcher/launcher.component.html
+++ b/src/app/components/launcher/launcher.component.html
@@ -69,6 +69,9 @@
           required
         />
       </div>
+      <div class="app-loader">
+        <app-loader></app-loader>
+      </div>
 
       <button type="submit" (click)="redirect()">Launch</button>
     </form>
