--- a/src/app/modules/header/header.component.css
+++ b/src/app/modules/header/header.component.css
@@ -17,7 +17,6 @@
   float: left;
 }
 
-
 img {
   max-width: 90%;
   max-height: 90%;
@@ -25,7 +24,7 @@ img {
 }
 
 .bankName {
-  width: 35%;
+  width: 55%;
   height: 100%;
   margin-left: 5%;
   float: left;
@@ -87,7 +86,6 @@ img {
 .dropbtn {
   background-color: var(--theme-color);
   color: white;
-  padding: 16px;
   font-size: 16px;
   border: none;
   cursor: pointer;
@@ -97,10 +95,25 @@ img {
   font-size: 150%;
 }
 
+.options {
+  width: 15%;
+  height: 100%;
+  margin-left: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  float: right;
+}
+
 .dropdown {
   position: relative;
+  width: 100%;
   height: 100%;
   float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .dropdown-content {
@@ -117,6 +130,7 @@ img {
 
 .dropdown:hover .dropdown-content {
   display: flex;
+  top: 100%;
 }
 
 .dropdown:hover .dropbtn {
